# adverse-news-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
src/adverse_news/: __init__.py  analyzer.py  app.py  cli.py  config.py  models.py
src/adverse_news/llm/: base.py  claude_provider.py  ollama_provider.py  prompts.py
src/adverse_news/report/: excel_writer.py
src/adverse_news/scraper/: article_parser.py  base.py  ddg_source.py  gnews_source.py  google_news_source.py
